--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jdevs</groupId>
   <artifactId>studentapp</artifactId>
-  <version>2.2-SNAPSHOT</version>
+  <version></version>
   <packaging>war</packaging>
   <build>
     <extensions>
